# Specter

./: .gitignore  README.md
example_program/: Cargo.toml  build.rs  test_compile.rs
example_program/src/: components.rs  main.nio  main.nioe  main.rs  systems.rs
example_program/src/archived_v2/ecs/: components.specter
example_program/src/archived_v2/specter_gen/: mod.rs
example_program/src/components/: position.comp  velocity.comp
example_program/src/ecs/: physics.sys
example_program/src/ecs/components/: physics.cmps
example_program/src/ecs/systems/: physics.sys
example_program/src/specter/: mod.rs
example_program/src/specter/components/: mod.rs  velocity_component.rs
example_program/src/specter_gen/: mod.rs
example_program/src/systems/: physics.sys
hello_world/: .gitignore  main.nioe
specter/: .gitignore  Cargo.toml  LICENSE  language_definition.md  main.nioe
specter/src/: build_components.rs  build_systems.rs  components.rs  data_types.rs  example-components  example-script  file_sys.rs  generate_components.rs  generate_module.rs  generate_systems.rs  generate_types.rs  lib.rs  main.rs  main_node.rs  nio.pest  nioe.pest  nioe_v2.pest  node.rs  object_locator.rs  rule_parser.rs  specter.pest  string_generator.rs  systems.rs
specter/src/archived/: build_systems.rs  example-components  generate_components.rs  old_lib.rs
specter/src/backend/: mod.rs  string_generator.rs
specter/src/nio/: execute.rs  identifier.rs  input.rs  main_node.rs  mod.rs  node.rs  output.rs
specter/src/nioe/: analyzer.rs  ast.rs  compiler.rs  lexer.rs  mod.rs
(+32 files in other folders)
