[package]
name = "example_program"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specter = {path = "../specter"}
specs = "0.16.1"

[build-dependencies]
specter = {path = "../specter"}
