[package]
name = "specter"
version = "0.1.0"
authors = ["Eric Olson <eric.rob.olson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "0.16.1"
fixed = "0.5.6"
walkdir = "2.3.1"
Inflector = "0.11.4"
pest = "2.1.3"
pest_derive = "2.1"